--- a/Vanrise/Code/Vanrise.Notification.MainExtensions/Vanrise.Notification.MainExtensions.csproj
+++ b/Vanrise/Code/Vanrise.Notification.MainExtensions/Vanrise.Notification.MainExtensions.csproj
@@ -64,6 +64,9 @@
       <Name>Vanrise.Notification.Entities</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="VRActionDefinition\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>xcopy /y $(TargetPath) ..\..\..\Output</PostBuildEvent>
