--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -321,6 +321,9 @@
     <Reference Include="Vanrise.GenericData.Normalization">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.GenericData.Normalization.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.GenericData.Notification">
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.GenericData.Notification.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.GenericData.Pricing">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.GenericData.Pricing.dll</HintPath>
     </Reference>
