implement history for accountBe
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C39949

--- a/Retail/Code/Retail.BusinessEntity.MainExtensions/Retail.BusinessEntity.MainExtensions.csproj
+++ b/Retail/Code/Retail.BusinessEntity.MainExtensions/Retail.BusinessEntity.MainExtensions.csproj
@@ -142,6 +142,7 @@
     <Compile Include="AccountViews\AccountIdentificationRules.cs" />
     <Compile Include="AccountViews\AccountInfo.cs" />
     <Compile Include="AccountViews\AccountPackages.cs" />
+    <Compile Include="AccountViews\AccountHistoryView.cs" />
     <Compile Include="PortalAccount\PortalAccount.cs" />
     <Compile Include="AccountViews\AccountServices.cs" />
     <Compile Include="AccountViews\Actions.cs" />
