--- a/Retail/Code/Retail.BusinessEntity.Web/Retail.BusinessEntity.Web.csproj
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail.BusinessEntity.Web.csproj
@@ -246,6 +246,7 @@
     <Content Include="Retail_BusinessEntity\Directives\AccountDefinition\AccountGridDefinition\Templates\GridColumnDefinitionExportExcelEditor.html" />
     <Content Include="Retail_BusinessEntity\Directives\AccountDefinition\AccountSecurityDefinition\retail-be-accountsecuritydefinition-management.js" />
     <Content Include="Retail_BusinessEntity\Directives\AccountDefinition\AccountSecurityDefinition\Templates\AccountSecurityDefinitionManagementTemplate.html" />
+    <Content Include="Retail_BusinessEntity\Directives\AccountDefinition\AccountViewDefinition\MainExtensions\retail-be-accountviewdefinitionsettings-acounthistory.js" />
     <Content Include="Retail_BusinessEntity\Directives\AccountDefinition\AccountViewDefinition\MainExtensions\retail-be-accountviewdefinitionsettings-actions.js" />
     <Content Include="Retail_BusinessEntity\Directives\AccountDefinition\AccountViewDefinition\MainExtensions\retail-be-accountviewdefinitionsettings-childberelation.js" />
     <Content Include="Retail_BusinessEntity\Directives\AccountDefinition\AccountViewDefinition\MainExtensions\retail-be-accountviewdefinitionsettings-financialtransactions.js" />
@@ -255,6 +256,7 @@
     <Content Include="Retail_BusinessEntity\Directives\AccountDefinition\AccountViewDefinition\MainExtensions\retail-be-accountviewdefinitionsettings-services.js" />
     <Content Include="Retail_BusinessEntity\Directives\AccountDefinition\AccountViewDefinition\MainExtensions\retail-be-accountviewdefinitionsettings-subaccounts.js" />
     <Content Include="Retail_BusinessEntity\Directives\AccountDefinition\AccountViewDefinition\MainExtensions\retail-be-accountviewdefinitionsettings-accountinfo.js" />
+    <Content Include="Retail_BusinessEntity\Directives\AccountDefinition\AccountViewDefinition\MainExtensions\Templates\AccountHistorySettingsTemplate.html" />
     <Content Include="Retail_BusinessEntity\Directives\AccountDefinition\AccountViewDefinition\MainExtensions\Templates\ActionsViewSettingsTemplate.html" />
     <Content Include="Retail_BusinessEntity\Directives\AccountDefinition\AccountViewDefinition\MainExtensions\Templates\ChildBERelationViewSettingsTemplate.html" />
     <Content Include="Retail_BusinessEntity\Directives\AccountDefinition\AccountViewDefinition\MainExtensions\Templates\FinancialTransactionsViewSettingsTemplate.html" />
@@ -287,6 +289,7 @@
     <Content Include="Retail_BusinessEntity\Directives\AccountSynchronizerHandler\Templates\AccountSynchronizerHandlerGridTemplate.html" />
     <Content Include="Retail_BusinessEntity\Directives\AccountSynchronizerHandler\Templates\AccountSynchronizerHandlerSettingsTemplate.html" />
     <Content Include="Retail_BusinessEntity\Directives\AccountSynchronizerHandler\Templates\AccountSynchronizerInsertHandlerEditor.html" />
+    <Content Include="Retail_BusinessEntity\Directives\AccountViews\MainExtensions\retail-be-accounthistory-view.js" />
     <Content Include="Retail_BusinessEntity\Directives\AccountViews\MainExtensions\retail-be-accountidentificationrules-view.js" />
     <Content Include="Retail_BusinessEntity\Directives\AccountViews\MainExtensions\retail-be-accountinfo-view.js" />
     <Content Include="Retail_BusinessEntity\Directives\AccountViews\MainExtensions\retail-be-accountpackages-view.js" />
@@ -296,6 +299,7 @@
     <Content Include="Retail_BusinessEntity\Directives\AccountViews\MainExtensions\retail-be-financialtransactions-view.js" />
     <Content Include="Retail_BusinessEntity\Directives\AccountViews\MainExtensions\retail-be-portalaccount-view.js" />
     <Content Include="Retail_BusinessEntity\Directives\AccountViews\MainExtensions\retail-be-subaccounts-view.js" />
+    <Content Include="Retail_BusinessEntity\Directives\AccountViews\MainExtensions\Templates\AccountHistoryViewTemplate.html" />
     <Content Include="Retail_BusinessEntity\Directives\AccountViews\MainExtensions\Templates\AccountIdentificationRulesViewTemplate.html" />
     <Content Include="Retail_BusinessEntity\Directives\AccountViews\MainExtensions\Templates\AccountPackagesViewTemplate.html" />
     <Content Include="Retail_BusinessEntity\Directives\AccountViews\MainExtensions\Templates\AccountServicesViewTemplate.html" />
