--- a/BusinessProcess/Code/Vanrise.BusinessProcess.Business/Vanrise.BusinessProcess.Business.csproj
+++ b/BusinessProcess/Code/Vanrise.BusinessProcess.Business/Vanrise.BusinessProcess.Business.csproj
@@ -74,6 +74,7 @@
     <Compile Include="BPInstanceTrackingManager.cs" />
     <Compile Include="BPInstanceManager.cs" />
     <Compile Include="BPDefinitionManager.cs" />
+    <Compile Include="DefaultBPDefinitionExtendedSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BPValidationMessageManager.cs" />
   </ItemGroup>
