implemented Prompt for password if token is expired in UI
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C39960

--- a/Vanrise/Code/Vanrise.Security.Web/Vanrise.Security.Web.csproj
+++ b/Vanrise/Code/Vanrise.Security.Web/Vanrise.Security.Web.csproj
@@ -182,6 +182,7 @@
     <Content Include="Security\Services\APIServices\WidgetDefinitionAPIService.js" />
     <Content Include="Security\Services\BusinessEntityDefinitionService.js" />
     <Content Include="Security\Services\BusinessEntityModuleService.js" />
+    <Content Include="Security\Services\CookieService.js" />
     <Content Include="Security\Services\MenuService.js" />
     <Content Include="Security\Services\RequiredPermissionService.js" />
     <Content Include="Security\Services\ModuleService.js" />
