--- a/Vanrise/Code/Vanrise.Web/Vanrise.Web.csproj
+++ b/Vanrise/Code/Vanrise.Web/Vanrise.Web.csproj
@@ -338,6 +338,8 @@
     <Content Include="Client\Javascripts\Modules\appControllers.js" />
     <Content Include="Client\Javascripts\Modules\appRouting.js" />
     <Content Include="Client\Javascripts\Modules\mainModule.js" />
+    <Content Include="Client\Javascripts\Services\APIServices\ReenterPasswordModal.html" />
+    <Content Include="Client\Javascripts\Services\APIServices\ReenterPasswordModalController.js" />
     <Content Include="Client\Javascripts\Services\FileAPIService.js" />
     <Content Include="Client\Javascripts\Services\APIServices\BaseAPIService.js" />
     <Content Include="Client\Javascripts\Services\base-dir-service.js" />
