--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/TOne.WhS.Sales.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/TOne.WhS.Sales.Web.csproj
@@ -158,6 +158,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="WhS_Sales\Constants\CountrySelectionTypeEnum.js" />
     <Content Include="WhS_Sales\Constants\CustomerSelectionTypeEnum.js" />
     <Content Include="WhS_Sales\Constants\MarginTypesEnum.js" />
     <Content Include="WhS_Sales\Constants\ModuleConfig.js" />
@@ -248,6 +249,8 @@
     <Content Include="WhS_Sales\Services\RatePlanUtilsService.js" />
     <Content Include="WhS_Sales\Services\RatePlanService.js" />
     <Content Include="WhS_Sales\Services\SellingRuleService.js" />
+    <Content Include="WhS_Sales\Views\AddCountries.html" />
+    <Content Include="WhS_Sales\Views\AddCountriesController.js" />
     <Content Include="WhS_Sales\Views\BulkAction\BulkActionWizard.html" />
     <Content Include="WhS_Sales\Views\BulkAction\BulkActionWizardController.js" />
     <Content Include="WhS_Sales\Views\Email.html" />
