--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.MainExtensions/TOne.WhS.AccountBalance.MainExtensions.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.MainExtensions/TOne.WhS.AccountBalance.MainExtensions.csproj
@@ -48,6 +48,10 @@
     <Reference Include="Vanrise.AccountBalance.Entities">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.AccountBalance.Entities.dll</HintPath>
     </Reference>
+    <Reference Include="Vanrise.Caching, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Caching.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Common.dll</HintPath>
