--- a/Xbooster/Code/XBooster.Runtime/App.config
+++ b/Xbooster/Code/XBooster.Runtime/App.config
@@ -55,26 +55,29 @@
     <add name="LogDBConnString" connectionString="Initial Catalog=XBooster_Dev_Logging;Data Source=.;User ID=sa; Password=p@ssw0rd" />
     <add name="TransactionDBConnString" connectionString="Data Source=.;Initial Catalog=XBooster_Dev_Transaction;User ID=sa; Password=p@ssw0rd" />
 
-    <add name="CDRComparisonOutputDBConnString" connectionString="Server=192.168.110.185;Database=XBooster_Dev_CDRComparisonOutput;User ID=development;Password=dev!123;" />
-    
+    <add name="CDRComparisonOutputDBConnString" connectionString="Server=192.168.110.185;Database=XBooster_Dev_CDRComparisonOutput;User ID=development;Password=dev!123;" />    
   </connectionStrings>
-  <appSettings>   
-
-    <add key="SecurityDBConnStringKey" value="ConfigurationDBConnString" />
-    <add key="ConfigurationDBConnStringKey" value="ConfigurationDBConnString" />
-    <add key="BigDataServiceDBConnStringKey" value="TransactionDBConnString"/>
-    <add key="RuntimeConnStringKey" value="TransactionDBConnString" />
-    <add key="BusinessProcessDBConnStringKey" value="TransactionDBConnString" />
-    <add key="BusinessProcessTrackingDBConnStringKey" value="LogDBConnString" />
-    <add key="BusinessProcessConfigDBConnStringKey" value="ConfigurationDBConnString" />
-
-    <add key="CDRComparisonDBConnStringKey" value="XBoosterDBConnString"/>
-    <add key="CDRComparisonOutputDBConnStringKey" value="CDRComparisonOutputDBConnString"/>
-    <add key="VRFile_CDRComparison_FileCDRSource_DBConnStringKey" value="CDRComparisonOutputDBConnString"/>
-    
+  <appSettings>
+    <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
     <add key="IsRuntimeService" value="true"/>
-    <add key="IntegrationConfigDBConnStringKey" value="ConfigurationDBConnString"/>
-    <add key="RuntimeConfigDBConnStringKey" value="ConfigurationDBConnString"/>
+    <add key="BCPTempFilesDirectory"  value="C:\BCPFiles" />
+
+    <add key="RuntimeConnStringKey"                             value="TransactionDBConnString"/>
+    <add key="BusinessProcessDBConnStringKey"                   value="TransactionDBConnString"/>
+    <add key="BigDataServiceDBConnStringKey"                    value="TransactionDBConnString"/>
+
+    <add key="BusinessProcessTrackingDBConnStringKey"           value="LogDBConnString" />
+    <add key="LoggingDBConnStringKey"                           value="LogDBConnString"/>
+
+    <add key="SecurityDBConnStringKey"                          value="ConfigurationDBConnString"/>
+    <add key="ConfigurationDBConnStringKey"                     value="ConfigurationDBConnString"/>
+    <add key="BusinessProcessConfigDBConnStringKey"             value="ConfigurationDBConnString"/>
+    <add key="CDRComparisonDBConnStringKey"                     value="XBoosterDBConnString"/>
+    <add key="IntegrationConfigDBConnStringKey"                 value="ConfigurationDBConnString"/>
+    <add key="RuntimeConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
+
+    <add key="CDRComparisonOutputDBConnStringKey"                 value="CDRComparisonOutputDBConnString"/>
+    <add key="VRFile_CDRComparison_FileCDRSource_DBConnStringKey" value="CDRComparisonOutputDBConnString"/>
   </appSettings>
 
   <startup>
