--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Business/TOne.WhS.Sales.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Business/TOne.WhS.Sales.Business.csproj
@@ -154,6 +154,7 @@
     <Compile Include="RatePlanZoneManager.cs" />
     <Compile Include="Preview\RatePreviewManager.cs" />
     <Compile Include="Preview\SaleZoneRoutingProductPreviewManager.cs" />
+    <Compile Include="Reader\SaleRateReadRPChanges.cs" />
     <Compile Include="SaleZone\ApplicableSaleZoneFilter.cs" />
     <Compile Include="SaleZone\SaleZoneCountrySoldToCustomerFilter.cs" />
     <Compile Include="SellingRuleManager.cs" />
