--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Business/TOne.WhS.Sales.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Business/TOne.WhS.Sales.Business.csproj
@@ -110,6 +110,7 @@
     <Compile Include="BusinessRules\Conditions\SellingProductZoneRateIsEndedCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ServiceBEDLessThanValidBEDCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ServiceEEDGreaterThanZoneEED.cs" />
+    <Compile Include="BusinessRules\Conditions\SPDefaultRPDoesNotExistCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ZoneCountryIsEndedAndZoneIsChangedCondition.cs" />
     <Compile Include="BusinessRules\Conditions\ZoneIsPendingClosedAndChangedCondition.cs" />
     <Compile Include="ConfigManager.cs" />
