--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Entities/TOne.WhS.AccountBalance.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Entities/TOne.WhS.AccountBalance.Entities.csproj
@@ -41,6 +41,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Vanrise.AccountBalance.Entities">
+      <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.AccountBalance.Entities.dll</HintPath>
+    </Reference>
     <Reference Include="Vanrise.Entities">
       <HintPath>..\..\..\..\Vanrise\Code\Output\Vanrise.Entities.dll</HintPath>
     </Reference>
@@ -49,12 +52,19 @@
     <Compile Include="CarrierFinancialAccountData.cs" />
     <Compile Include="FinancialAccountIsCustomerAccountContext.cs" />
     <Compile Include="FinancialAccountIsSupplierAccountContext.cs" />
+    <Compile Include="FinancialValidationData.cs" />
     <Compile Include="GetUsageTransactionTypesContext.cs" />
     <Compile Include="FinancialAccount.cs" />
     <Compile Include="FinancialAccountDetail.cs" />
     <Compile Include="FinancialAccountQuery.cs" />
     <Compile Include="FinancialAccountSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TOne.WhS.BusinessEntity.Entities\TOne.WhS.BusinessEntity.Entities.csproj">
+      <Project>{0923754d-484c-48f7-9284-be9b6b9d5449}</Project>
+      <Name>TOne.WhS.BusinessEntity.Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
