--- a/Vanrise/Code/Vanrise.BEBridge.Entities/Vanrise.BEBridge.Entities.csproj
+++ b/Vanrise/Code/Vanrise.BEBridge.Entities/Vanrise.BEBridge.Entities.csproj
@@ -41,10 +41,17 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Vanrise.Security.Business">
+      <HintPath>..\Output\Vanrise.Security.Business.dll</HintPath>
+    </Reference>
+    <Reference Include="Vanrise.Security.Entities">
+      <HintPath>..\Output\Vanrise.Security.Entities.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BEReceiveDefinition\BEReceiveDefinition.cs" />
     <Compile Include="BEReceiveDefinition\BEReceiveDefinitionDetail.cs" />
+    <Compile Include="BEReceiveDefinition\BEReceiveDefinitionFilter.cs" />
     <Compile Include="BEReceiveDefinition\BEReceiveDefinitionInfo.cs" />
     <Compile Include="BEReceiveDefinition\BEReceiveDefinitionQuery.cs" />
     <Compile Include="BEReceiveDefinition\BEReceiveDefinitionSettings.cs" />
