--- a/Vanrise/Code/Vanrise.BEBridge.Web/Vanrise.BEBridge.Web.csproj
+++ b/Vanrise/Code/Vanrise.BEBridge.Web/Vanrise.BEBridge.Web.csproj
@@ -145,6 +145,10 @@
       <Project>{b5a56148-0dd1-4bc5-9357-72d289c6f863}</Project>
       <Name>Vanrise.BEBridge.MainExtensions</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Vanrise.Common\Vanrise.Common.csproj">
+      <Project>{1a350b7c-28ea-4824-b9a0-c60ad25f0ea9}</Project>
+      <Name>Vanrise.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Vanrise.Entities\Vanrise.Entities.csproj">
       <Project>{cfecfd8a-51f6-4020-9f80-fb334684fa3d}</Project>
       <Name>Vanrise.Entities</Name>
