--- a/Vanrise/Code/Vanrise.Analytic.Entities/Vanrise.Analytic.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Analytic.Entities/Vanrise.Analytic.Entities.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Config\Measure\IMeasureEvaluator.cs" />
     <Compile Include="Config\Measure\AnalyticMeasureConfigQuery.cs" />
     <Compile Include="DataAnalysis\Common\DARecordAggregate.cs" />
+    <Compile Include="DataAnalysis\ProfilingAndCalculation\Common\IDAProfCalcCalculationEvaluator.cs" />
     <Compile Include="DataAnalysis\Common\TimeRangeFilterConfig.cs" />
     <Compile Include="DataAnalysis\DataAnalysisDefinition\DataAnalysisDefinition.cs" />
     <Compile Include="DataAnalysis\Common\DARecordAggregateConfig.cs" />
