--- a/Xbooster/Code/Xbooster.Web/Web.config
+++ b/Xbooster/Code/Xbooster.Web/Web.config
@@ -46,7 +46,8 @@
     <add key="BusinessProcessDBConnStringKey" value="TransactionDBConnString" />
     <add key="BusinessProcessTrackingDBConnStringKey" value="LogDBConnString" />
     <add key="BusinessProcessConfigDBConnStringKey" value="ConfigurationDBConnString" />
-
+    <add key="LoggingConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
+    
     <add key="CDRComparisonDBConnStringKey" value="XBoosterDBConnString" />
     <add key="CDRComparisonOutputDBConnStringKey" value="CDRComparisonOutputDBConnString" />
     <add key="VRFile_CDRComparison_FileCDRSource_DBConnStringKey" value="CDRComparisonOutputDBConnString" />
