--- a/Xbooster/Code/Xbooster.Web/Web.config
+++ b/Xbooster/Code/Xbooster.Web/Web.config
@@ -31,6 +31,7 @@
     <add name="CDRComparisonOutputDBConnString" connectionString="Server=192.168.110.185;Database=XBooster_Dev_CDRComparisonOutput;User ID=development;Password=dev!123;" />
   </connectionStrings>
   <appSettings>
+    <add key="Web_ExtendedModulesNames" value=""/>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
