--- a/QualityMeasurement/Code/QualityMeasurement.Web/Web.config
+++ b/QualityMeasurement/Code/QualityMeasurement.Web/Web.config
@@ -44,6 +44,7 @@
     <add name="BIConnectionString" connectionString="Provider=MSOLAP;Data Source = http://192.168.110.185:1214/msmdpump.dll; Initial Catalog = QualityMeasurementBI; User Id = vanrise\olap.access; Password = 0l@p@cce$$" />
   </connectionStrings>
   <appSettings>
+    <add key="Web_ExtendedModulesNames" value="BI"/>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
