update configuration files
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40029

--- a/QualityMeasurement/Code/QualityMeasurement.Web/Web.config
+++ b/QualityMeasurement/Code/QualityMeasurement.Web/Web.config
@@ -38,33 +38,43 @@
     <add name="QMConnString" connectionString="Server=192.168.110.185;Database=QualityMeasurement;User ID=Development;Password=dev!123" />-->
     
     <add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=QualityMeasurementConfiguration;User ID=development;Password=dev!123;" />
+    <add name="QMConnString" connectionString="Server=192.168.110.185;Database=QualityMeasurement_Dev;User ID=Development;Password=dev!123" />
+    
     <add name="TransactionDBConnString" connectionString="Data Source=.;Initial Catalog=QMTransactionDB;User ID=sa; Password=p@ssw0rd" />
     <add name="LogDBConnString" connectionString="Initial Catalog=QualityMeasurementLog;Data Source=.;User ID=sa; Password=p@ssw0rd" />
-    <add name="QMConnString" connectionString="Server=192.168.110.185;Database=QualityMeasurement_Dev;User ID=Development;Password=dev!123" />
+
+    <add name="MainDBConnString" connectionString=""/>
+    
     <add name="BIConnectionString" connectionString="Provider=MSOLAP;Data Source = http://192.168.110.185:1214/msmdpump.dll; Initial Catalog = QualityMeasurementBI; User Id = vanrise\olap.access; Password = 0l@p@cce$$" />
   </connectionStrings>
   <appSettings>
-    <add key="Web_ExtendedModulesNames" value="BI"/>
+    <add key="Web_ExtendedModulesNames" value=""/>
+    <add key="Vanrise License" value="28-22-92-DB-92-8B-8A-DE-78-FD-95-85-7B-E3-E8-19::==wMwkDM5EDMyMDM5ATNxAjM:kVGdwlncj5WR09mT" />
+    <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
+    <add key="TempPasswordValidity" value="24:00:00"/>
+
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="SecurityDBConnStringKey" value="ConfigurationDBConnString" />
-    <add key="ConfigurationDBConnStringKey" value="ConfigurationDBConnString" />
-    <add key="BigDataServiceDBConnStringKey" value="TransactionDBConnString"/>
-    <add key="RuntimeConnStringKey" value="TransactionDBConnString" />
-    <add key="IntegrationConnStringKey" value="TransactionDBConnString" />
-    <add key="BusinessProcessDBConnStringKey" value="TransactionDBConnString" />    
-    <add key="QM_BE_DBConnStringKey" value="QMConnString" />
-    <add key="QM_CLITester_DBConnStringKey" value="QMConnString" />
-    <add key="Vanrise License" value="28-22-92-DB-92-8B-8A-DE-78-FD-95-85-7B-E3-E8-19::==wMwkDM5EDMyMDM5ATNxAjM:kVGdwlncj5WR09mT" />
-    <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
-    <add key="ConnectorEmail" value="WYtp0l4OqaBUNquwGoGhztgUI8jFe5CRaNrzLrr3ESU=" />
-    <add key="ConnectorPassword" value="XBJnXe8lZBfUxP9BpalLAg==" />
-    <add key="ConnectorUrl" value="dCw8OSmS14MSHGcMFrmxOG+9zd0qm3XhUBY0lfvvRhM=" />
-    <add key="ConnectorUrlBeta" value="CLGo9vEUBAsD1kNHD/qrtA8bJdRl0NWvy8UeHVvKRjg=" />
-    <add key="BIDBConnStringKey" value="ConfigurationDBConnString" />
+
+    <add key="RuntimeConnStringKey"                             value="TransactionDBConnString"/>
+    <add key="BusinessProcessDBConnStringKey"                   value="TransactionDBConnString"/>
+    <add key="BigDataServiceDBConnStringKey"                    value="TransactionDBConnString"/>
+
+    <add key="LoggingDBConnStringKey"                           value="LogDBConnString"/>
+
+    <add key="SecurityDBConnStringKey"                          value="ConfigurationDBConnString"/>
+    <add key="ConfigurationDBConnStringKey"                     value="ConfigurationDBConnString"/>
+    <add key="IntegrationConfigDBConnStringKey"                 value="ConfigurationDBConnString"/>
+    <add key="RuntimeConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
+
+    <add key="QM_BE_DBConnStringKey"                            value="QMConnString"/>
+    <add key="QM_CLITester_DBConnStringKey"                     value="QMConnString"/>
+
+    <add key="BIDBConnStringKey"                                value="ConfigurationDBConnString" />
+
     <add key="BICubeName" value="Quality Measurement BI" />
     <add key="BIDimension_DATE" value="[Dim Time].[Date Instance]" />
     <add key="BIDimension_YEAR" value="[Dim Time].[Year]" />
@@ -72,11 +82,11 @@
     <add key="BIDimension_WEEKOFMONTH" value="[Dim Time].[Week Of Month]" />
     <add key="BIDimension_DAYOFMONTH" value="[Dim Time].[Day Of Month]" />
     <add key="BIDimension_HOUR" value="[Dim Time].[Hour]" />
-    
-    <add key="IntegrationConfigDBConnStringKey" value="ConfigurationDBConnString"/>
-    <add key="RuntimeConfigDBConnStringKey" value="ConfigurationDBConnString"/>
 
-    <add key="LoggingDBConnStringKey" value="LogDBConnString"/>
+    <add key="ConnectorEmail" value="WYtp0l4OqaBUNquwGoGhztgUI8jFe5CRaNrzLrr3ESU=" />
+    <add key="ConnectorPassword" value="XBJnXe8lZBfUxP9BpalLAg==" />
+    <add key="ConnectorUrl" value="dCw8OSmS14MSHGcMFrmxOG+9zd0qm3XhUBY0lfvvRhM=" />
+    <add key="ConnectorUrlBeta" value="CLGo9vEUBAsD1kNHD/qrtA8bJdRl0NWvy8UeHVvKRjg=" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
