--- a/QualityMeasurement/Code/QualityMeasurement.DevRuntime/App.config
+++ b/QualityMeasurement/Code/QualityMeasurement.DevRuntime/App.config
@@ -54,45 +54,39 @@
     <add name="QMConnString" connectionString="Server=192.168.110.195;Database=ClearVoiceConfigurationDB;User ID=sa;Password=QAP@ssw0rd" />-->
     
     <add name="ConfigurationDBConnString" connectionString="Server=192.168.110.185;Database=QualityMeasurementConfiguration;User ID=development;Password=dev!123;" />
-    <add name="LogDBConnString" connectionString="Server=192.168.110.185;Database=QualityMeasurementLog;User ID=Development;Password=dev!123" />
-    <add name="QMConnString" connectionString="Server=192.168.110.185;Database=QualityMeasurement_Dev;User ID=Development;Password=dev!123" />
     <add name="TransactionDBConnString" connectionString="Data Source=.;Initial Catalog=QMTransactionDB;User ID=sa; Password=p@ssw0rd" />
+    <add name="QMConnString" connectionString="Server=192.168.110.185;Database=QualityMeasurement_Dev;User ID=Development;Password=dev!123" />
+    <add name="LogDBConnString" connectionString="Initial Catalog=QualityMeasurementLog;Data Source=.;User ID=sa; Password=p@ssw0rd" />
 
     <!--<add name="CDRDBConnectionString" connectionString="Data Source=192.168.110.185;Initial Catalog=QualityMeasurement_Dev;User ID=development;Password=dev!123;" providerName="System.Data.SqlClient" />-->
     <!--<add name="LogDBConnString" connectionString="Initial Catalog=QualityMeasurementLog;Data Source=.;User ID=sa; Password=p@ssw0rd" />-->
   </connectionStrings>
   <appSettings>
-    <add key="webpages:Version" value="2.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="PreserveLoginUrl" value="true" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="SecurityDBConnStringKey" value="ConfigurationDBConnString" />
-    <add key="RuntimeConnStringKey" value="TransactionDBConnString" />
-    <add key="IntegrationConnStringKey" value="TransactionDBConnString" />
-    <add key="ConfigurationDBConnStringKey" value="ConfigurationDBConnString" />
-    <add key="BigDataServiceDBConnStringKey" value="TransactionDBConnString"/>
-    <add key="BusinessProcessDBConnStringKey" value="TransactionDBConnString" />
-    <add key="QM_BE_DBConnStringKey" value="QMConnString" />
-    <add key="QM_CLITester_DBConnStringKey" value="QMConnString" />
-    <add key="Vanrise License" value="28-22-92-DB-92-8B-8A-DE-78-FD-95-85-7B-E3-E8-19::==wMwkDM5EDMyMDM5ATNxAjM:kVGdwlncj5WR09mT" />
     <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
-    <add key="IsRuntimeService" value="false" />
-    
-    <!--Sama Profile-->
-    <!--<add key="ConnectorEmail" value="AhxkeopAGtDvXwLqP9NK/gYo1xPk4CFBzfAbLkMqH8A=" />
-    <add key="ConnectorPassword" value="WSZCkE2SkDKSst3TB5OAmQ==" />-->
+    <add key="IsRuntimeService" value="false"/>
+
+    <add key="RuntimeConnStringKey"                             value="TransactionDBConnString"/>
+
+    <add key="LoggingDBConnStringKey"                           value="LogDBConnString"/>
+
+    <add key="SecurityDBConnStringKey"                          value="ConfigurationDBConnString"/>
+    <add key="ConfigurationDBConnStringKey"                     value="ConfigurationDBConnString"/>
+    <add key="IntegrationConfigDBConnStringKey"                 value="ConfigurationDBConnString"/>
+    <add key="RuntimeConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
+
+    <add key="QM_BE_DBConnStringKey"                            value="QMConnString"/>
+    <add key="QM_CLITester_DBConnStringKey"                     value="QMConnString"/>
 
     <!--Testing Profile-->
     <add key="ConnectorEmail" value="WYtp0l4OqaBUNquwGoGhztgUI8jFe5CRaNrzLrr3ESU=" />
     <add key="ConnectorPassword" value="XBJnXe8lZBfUxP9BpalLAg==" />
-    
     <add key="ConnectorUrl" value="dCw8OSmS14MSHGcMFrmxOG+9zd0qm3XhUBY0lfvvRhM=" />
     <add key="ConnectorUrlBeta" value="CLGo9vEUBAsD1kNHD/qrtA8bJdRl0NWvy8UeHVvKRjg=" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
-
-    <add key="IntegrationConfigDBConnStringKey" value="ConfigurationDBConnString"/>
-    <add key="RuntimeConfigDBConnStringKey" value="ConfigurationDBConnString"/>
+    
+    
+    <!--Sama Profile-->
+    <!--<add key="ConnectorEmail" value="AhxkeopAGtDvXwLqP9NK/gYo1xPk4CFBzfAbLkMqH8A=" />
+    <add key="ConnectorPassword" value="WSZCkE2SkDKSst3TB5OAmQ==" />-->
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
