Add new key LoggingConfigDBConnStringKey
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40036

--- a/QualityMeasurement/Code/QualityMeasurement.Web/Web.config
+++ b/QualityMeasurement/Code/QualityMeasurement.Web/Web.config
@@ -69,7 +69,8 @@
     <add key="ConfigurationDBConnStringKey"                     value="ConfigurationDBConnString"/>
     <add key="IntegrationConfigDBConnStringKey"                 value="ConfigurationDBConnString"/>
     <add key="RuntimeConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
-
+    <add key="LoggingConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
+    
     <add key="QM_BE_DBConnStringKey"                            value="QMConnString"/>
     <add key="QM_CLITester_DBConnStringKey"                     value="QMConnString"/>
 
