update IsRuntimeService value
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40037

--- a/Xbooster/Code/XBooster.Runtime/App.config
+++ b/Xbooster/Code/XBooster.Runtime/App.config
@@ -59,7 +59,7 @@
   </connectionStrings>
   <appSettings>
     <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
-    <add key="IsRuntimeService" value="true"/>
+    <add key="IsRuntimeService" value="false"/>
     <add key="BCPTempFilesDirectory"  value="C:\BCPFiles" />
 
     <add key="RuntimeConnStringKey"                             value="TransactionDBConnString"/>
