--- a/Xbooster/Code/Xbooster.Web/Web.config
+++ b/Xbooster/Code/Xbooster.Web/Web.config
@@ -32,33 +32,35 @@
   </connectionStrings>
   <appSettings>
     <add key="Web_ExtendedModulesNames" value=""/>
+    <add key="Vanrise License" value="28-22-92-DB-92-8B-8A-DE-78-FD-95-85-7B-E3-E8-19::==wMwkDM5EDMyMDM5ATNxAjM:kVGdwlncj5WR09mT"/>
+    <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t"/>
+    <add key="TempPasswordValidity" value="24:00:00"/>
+
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="Vanrise License" value="28-22-92-DB-92-8B-8A-DE-78-FD-95-85-7B-E3-E8-19::==wMwkDM5EDMyMDM5ATNxAjM:kVGdwlncj5WR09mT" />
-    <add key="EncryptionSecretKey" value="V@nR!se-Se6r3t" />
 
-    <add key="SecurityDBConnStringKey" value="ConfigurationDBConnString" />
-    <add key="ConfigurationDBConnStringKey" value="ConfigurationDBConnString" />
-    <add key="BigDataServiceDBConnStringKey" value="TransactionDBConnString"/>
-    <add key="RuntimeConnStringKey" value="TransactionDBConnString" />
-    <add key="BusinessProcessDBConnStringKey" value="TransactionDBConnString" />
-    <add key="BusinessProcessTrackingDBConnStringKey" value="LogDBConnString" />
-    <add key="BusinessProcessConfigDBConnStringKey" value="ConfigurationDBConnString" />
+    <add key="RuntimeConnStringKey"                             value="TransactionDBConnString"/>
+    <add key="BusinessProcessDBConnStringKey"                   value="TransactionDBConnString"/>
+    <add key="BigDataServiceDBConnStringKey"                    value="TransactionDBConnString"/>
+
+    <add key="BusinessProcessTrackingDBConnStringKey"           value="LogDBConnString" />
+    <add key="LoggingDBConnStringKey"                           value="LogDBConnString"/>
+
+    <add key="SecurityDBConnStringKey"                          value="ConfigurationDBConnString"/>
+    <add key="ConfigurationDBConnStringKey"                     value="ConfigurationDBConnString"/>
+    <add key="BusinessProcessConfigDBConnStringKey"             value="ConfigurationDBConnString"/>
+    <add key="CDRComparisonDBConnStringKey"                     value="XBoosterDBConnString"/>
+    <add key="IntegrationConfigDBConnStringKey"                 value="ConfigurationDBConnString"/>
+    <add key="RuntimeConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
     <add key="LoggingConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
-    
-    <add key="CDRComparisonDBConnStringKey" value="XBoosterDBConnString" />
-    <add key="CDRComparisonOutputDBConnStringKey" value="CDRComparisonOutputDBConnString" />
-    <add key="VRFile_CDRComparison_FileCDRSource_DBConnStringKey" value="CDRComparisonOutputDBConnString" />
 
-    <add key="VRFile_Max_Uncompressed_MB_Size" value="5" />
+    <add key="CDRComparisonOutputDBConnStringKey"                 value="CDRComparisonOutputDBConnString"/>
+    <add key="VRFile_CDRComparison_FileCDRSource_DBConnStringKey" value="CDRComparisonOutputDBConnString"/>
 
-    <add key="IntegrationConfigDBConnStringKey" value="ConfigurationDBConnString"/>
-    <add key="RuntimeConfigDBConnStringKey" value="ConfigurationDBConnString"/>
-
-    <add key="LoggingDBConnStringKey" value="LogDBConnString"/>
+    <add key="VRFile_Max_Uncompressed_MB_Size" value="5" /><!--VRFile_Max_Uncompressed_MB_Size used to set limitation for maximum file size-->    
   </appSettings>
   
   <system.web>
