--- a/Vanrise/Code/Vanrise.Analytic.Business/Vanrise.Analytic.Business.csproj
+++ b/Vanrise/Code/Vanrise.Analytic.Business/Vanrise.Analytic.Business.csproj
@@ -52,6 +52,7 @@
     <Compile Include="DataAnalysis\DADynamicTypeGenerator.cs" />
     <Compile Include="DataAnalysis\DAGetMeasureValueContext.cs" />
     <Compile Include="DataAnalysis\DAProfCalcDataRecordStorageFilter.cs" />
+    <Compile Include="DataAnalysis\DAProfCalcNotificationTypeFilter.cs" />
     <Compile Include="DataAnalysis\DAProfCalcStoreEventsOutputProcessor.cs" />
     <Compile Include="DataAnalysis\DAProfCalcGenerateVRAlertEventsOutputProcessor.cs" />
     <Compile Include="DataAnalysis\DAProfCalcOutputSettingsManager.cs" />
