--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Entities/TOne.WhS.AccountBalance.Entities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Entities/TOne.WhS.AccountBalance.Entities.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CarrierFinancialAccountData.cs" />
+    <Compile Include="FinancialAccountInfo.cs" />
     <Compile Include="FinancialAccountIsCustomerAccountContext.cs" />
     <Compile Include="FinancialAccountIsSupplierAccountContext.cs" />
     <Compile Include="FinancialValidationData.cs" />
