Implementing  object tracking drilldown for cities, countries, settings, and connections
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40064

--- a/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
+++ b/Vanrise/Code/Vanrise.Entities/Vanrise.Entities.csproj
@@ -76,7 +76,7 @@
     <Compile Include="VRActionAudit\VRActionAuditLKUPInfo.cs" />
     <Compile Include="VRActionAudit\VRActionAuditLKUPType.cs" />
     <Compile Include="VRActionAudit\VRLoggableEntityBase.cs" />
-    <Compile Include="VRActionAudit\VRLoggableEntityQeury.cs" />
+    <Compile Include="VRActionAudit\VRLoggableEntityQuery.cs" />
     <Compile Include="VRActionAudit\VRObjectTracking.cs" />
     <Compile Include="VRActionAudit\VRObjectTrackingMetaDataDetail.cs" />
     <Compile Include="VRApplicationVisibility\VRApplicationVisibility.cs" />
