add     LoggingConfigDBConnStringKey to config files
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40072

--- a/CarrierPortal/Code/CarrierPortal.Web/Web.config
+++ b/CarrierPortal/Code/CarrierPortal.Web/Web.config
@@ -49,7 +49,7 @@
     <add key="SecurityDBConnStringKey"                          value="ConfigurationDBConnString"/>
     <add key="ConfigurationDBConnStringKey"                     value="ConfigurationDBConnString"/>
     <add key="RuntimeConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
-
+    <add key="LoggingConfigDBConnStringKey"                     value="ConfigurationDBConnString"/>
     <add key="ExposedConnectionStringNames" value=""/>
   </appSettings>
   <system.web>
