--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.BP.Activities/TOne.WhS.Routing.BP.Activities.csproj
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.BP.Activities/TOne.WhS.Routing.BP.Activities.csproj
@@ -93,6 +93,7 @@
     <Compile Include="BuildCustomerRoutes.cs" />
     <Compile Include="CodePrefixRequest.cs" />
     <Compile Include="CreateRoutingDatabase.cs" />
+    <Compile Include="FinalizeRouteProcess.cs" />
     <Compile Include="GetCodePrefixGroupDetails.cs" />
     <Compile Include="LoadRoutingSettings.cs" />
     <Compile Include="DropOldRoutingDatabases.cs" />
